--- a/src/main/resource/application.yml
+++ b/src/main/resource/application.yml
@@ -8,18 +8,36 @@ spring:
     throw-exception-if-no-handler-found: true
   resources:
     add-mappings: false
+  #datasource:
+  #  url: jdbc:mysql://localhost:3306/spring-security?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+  #  username: root
+  #  password: root
+  #  driver-class-name: com.mysql.jdbc.Driver
   datasource:
-    url: jdbc:mysql://localhost:3306/spring-security?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    type: com.alibaba.druid.pool.DruidDataSource    #当前数据源操作类型
+    driver-class-name: com.mysql.jdbc.Driver   #此处不对哈  mysql驱动包
+    url: jdbc:mysql://localhost:3306/shangdj?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver
   redis:
-    sentinel:
-      master: mymaster
+    cluster:
       nodes:
-        - 127.0.0.1:27001
-        - 127.0.0.1:27002
-        - 127.0.0.1:27003
+        #分片集群配置的集群地址   配置的redis的master和slave的节点地址
+        - 127.0.0.1:7001
+        - 127.0.0.1:7002
+        - 127.0.0.1:7003
+        - 127.0.0.1:7004
+        - 127.0.0.1:8001
+        - 127.0.0.1:8002
+        - 127.0.0.1:8003
+    #sentinel:
+    #  master: mymaster
+    #  nodes:
+    #  #哨兵模式配置的集群地址   配置的sentinel的地址
+    #    - 127.0.0.1:26379
+    #    - 127.0.0.1:26380
+    #    - 127.0.0.1:26381
+
 
 
 mybatis-plus:
