搭建商品、库存案例查询功能基本

--- a/src/main/resource/application.yml
+++ b/src/main/resource/application.yml
@@ -16,7 +16,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource    #当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver   #此处不对哈  mysql驱动包
-    url: jdbc:mysql://localhost:3306/shangdj?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/redis?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
   redis:
@@ -41,23 +41,7 @@ spring:
 
 
 mybatis-plus:
-  type-aliases-package: com.redis.bo
+  type-aliases-package: com.redis.dto
   mapper-locations: classpath:mapper/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
-
-
-
-#redis:
-#  password:
-#  cluster:
-#    #nodes: 10.120.52.38:6300,10.120.52.39:6301,10.120.52.39:6300,10.120.52.40:6301,10.120.52.40:6300,10.120.52.38:6301
-#    nodes: 127.0.0.1:6379
-#    max-redirects: 5
-#  timeout: 60000
-#  pool:
-#    max-idle: 15
-#    max-wait: 60000
-#    max-active: 15
-
-
