--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,18 @@
 			<version>4.8.0</version>
 		</dependency>
 
+		<!--caffeine-->
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
+		<!--打印sql到控制台-->
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>-->
 
 	</dependencies>
 
